# mais-apis-python

./: .gitignore  .readthedocs.yaml  CHANGELOG.rst  MANIFEST.in  README.rst  RELEASE.rst  pyproject.toml  setup.cfg  setup.py  test_cert_create.sh  update-version-for-test-push.py
.github/: dependabot.yml
.github/workflows/: codeql.yml  common.yml  main.yml  pull.yml
docs/: account.rst  changes.rst  client.rst  conf.py  index.rst  requirements.txt  workgroup.rst
src/stanford/mais/account/: __init__.py  account.py  service.py  validate.py
src/stanford/mais/account/tests/: mock.py
src/stanford/mais/client/: __init__.py
src/stanford/mais/client/tests/: mock.py
src/stanford/mais/workgroup/: __init__.py  member.py  properties.py  workgroup.py
src/stanford/mais/workgroup/tests/: mock.py
tests/: conftest.py  test_account.py  test_account_changed_status.py  test_account_properties.py  test_account_services.py  test_account_validate.py  test_client.py  test_workgroup.py  test_workgroup_create.py  test_workgroup_member.py  test_workgroup_privgroup.py  test_workgroup_properties.py  test_workgroup_workgroup.py
