# vim: ts=4 sw=4 et
# -*- coding: utf-8 -*-

# Build using setuptools & wheel.
[build-system]
requires = [
    "setuptools >= 66.1.1",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.mypy]
namespace_packages = true
pretty = true
no_color_output = true
mypy_path = [
    "src"
]
# There is no support for putting `-p` / `-package` in the MyPy config file.
# Feature requested: https://github.com/python/mypy/issues/10728

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.tox]
requires = [
    "tox>=4.28.3",
]
env_list = "py{311,312,313}-{minimal,latest}"

[tool.tox.env_run_base]
deps = [
    "mypy >=0.910, <1.0",
    "types-requests",
    "pytest >=8.4.1, <8.5.0",
    "pytest-responses",
    "responses",
]
commands = [
    ["pytest", "--strict-config", "--strict-markers", "-W", "error"],
]
set_env = { PYTHONTRACEMALLOC = "20" }

[tool.tox.env.minimal]
deps = [
    "requests==2.30.0",
    "setuptools==66.1.1",
]

[tool.tox.env.latest]
deps = [
    "requests >2.32.4, <3.0",
    "setuptools >=80.9.0",
]

[tool.tox.gh.python]
"3.11" = ["py311-minimal", "py311-latest"]
"3.12" = ["py312-minimal", "py312-latest"]
"3.13" = ["py313-minimal", "py313-latest"]

[tool.bandit.assert_used]
skips = [ "tests/*.py" ]
