[metadata]
name = stanford-mais
version = file:VERSION
author = A. Karl Kornel
author_email = akkornel@stanford.edu
home_page = https://github.com/stanford-rc/mais-apis-python
project_urls =
    Bug Tracker = https://github.com/stanford-rc/mais-apis-python/issues
#    Documentation = https://localhost
    Source Code = https://github.com/stanford-rc/mais-apis-python/tree
description = Python client for Stanford MaIS APIs
#long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
license = GNU General Public License, version 3
license_file = LICENSE
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Office/Business
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.9, <4.0
install_requires =
    requests >=2.25.1, <3.0
zip_safe = True
include_package_data = True

[bdist_wheel]
universal = 1

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx >=4.0.2, <5.0
    sphinx-rtd-theme
#    stanford-theme
test =
    mypy >=0.910, <1.0
    types-requests

[options.entry_points]
#console_scripts = 
#   TBD
