[metadata]
name = stanford-mais
version = file:VERSION
author = A. Karl Kornel
author_email = akkornel@stanford.edu
home_page = https://github.com/stanford-rc/mais-apis-python
project_urls =
    Bug Tracker = https://github.com/stanford-rc/mais-apis-python/issues
    Documentation = https://mais-apis-python.readthedocs.io
    Source Code = https://github.com/stanford-rc/mais-apis-python/tree/main
description = Python client for Stanford MaIS APIs
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = GNU General Public License, version 3
license_file = LICENSE
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Office/Business
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.9, <4.0
install_requires =
    requests >=2.30.0, <3.0
zip_safe = False
include_package_data = True

[bdist_wheel]
universal = 1

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx >=5.0, <9.0
    sphinx-rtd-theme
#    stanford-theme
test =
    mypy >=0.910, <1.0
    types-requests
    pytest >=8.4.1, <8.5.0
    pytest-responses
    responses
    bandit >=1.7.0

[options.entry_points]
#console_scripts = 
#   TBD
