# This file contains setuptools configuration that's not in pyproject.toml.
#
# Once we can depend on Setuptools 68.1.0+, we can move the rest of these
# options to [tool.setuptools].
#
# File-based version will remain in here until we stop using a version file.
#
# Also, we no longer need this file to support editable installs, so as soon as
# this file is empty, it can be deleted.

[metadata]
version = file:VERSION

[options]
package_dir =
    = src
packages = find_namespace:

[options.packages.find]
where = src
